# cnote-cli

./: README.md  cli.py  pyproject.toml
