[project]
name = "cnote-cli"
version = "0.1.0"
description = "A simple command line tool to create daily notes that you can edit with editor of your choice"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["click>=8.1.8", "ipdb>=0.13.13"]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
cnote = "cli:cnote"
