[project]
name = "cnote-cli"
version = "1.0.0"
description = "A simple command line tool that allows you to manage your notes with your favorite code editor and terminal!"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["click>=8.1.8"]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
cnote = "cli:cnote"
